--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,7 +3,7 @@
 # For local development, you can reuse most of the values from the .env.example file, except for the following:
 ########################################################
 CONTROL_PLANE_OPENAI_API_KEY=<your_openai_api_key>
-CLI_OPENAI_API_KEY=<your_openai_api_key_can_be_the_same_as_server_openai_api_key>
+CLI_OPENAI_API_KEY=<your_openai_api_key>
 
 ########################################################
 # Alembic
