Feat/setup accounts api endpoints (#2)
### 📝 Description
- Setup dependencies for getting api context
- Setup initial accounts api router
- db migration script for org, team, user
    
<!-- This is an auto-generated description by cubic. -->
---

## Summary by cubic
Adds the initial Accounts API with register and login endpoints using
JWT auth. Also sets up org/team/user tables and a request-scoped DB
context.

- **New Features**
- Alembic migration creates organizations, users, teams, and membership
tables with constraints.
- POST /v1/accounts/register: email + password flow with bcrypt hashing.
- POST /v1/accounts/login: verifies credentials and returns HS256 JWT
(24h) including org memberships and current_act_as.
- RequestContext provides a SQLAlchemy session; router mounted under
/v1/accounts; JWT config enabled.

- **Migration**
  - Run alembic upgrade head.
- Set envs: CONTROL_PLANE_JWT_SIGNING_KEY,
CONTROL_PLANE_SESSION_SECRET_KEY, CONTROL_PLANE_FRONTEND_URL, and DB
vars.
- New deps: bcrypt, PyJWT. Docker compose mounts updated to ./aci for
Alembic containers.

<!-- End of auto-generated description by cubic. -->



<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->

## Summary by CodeRabbit

- New Features
- Introduced account registration and login endpoints with
email/password flow.
- Issued JWT access tokens with user and organization context on
successful login.
- Established initial organizations, teams, users, and membership data
model to support account features.
- Chores
- Enabled JWT configuration (signing key, algorithm, expiration) and
added router prefixes for accounts and organizations.
  - Added bcrypt and PyJWT dependencies.
  - Updated container volumes to mount the full backend directory.

<!-- end of auto-generated comment: release notes by coderabbit.ai -->

--- a/backend/compose.yml
+++ b/backend/compose.yml
@@ -63,7 +63,7 @@ services:
       - .env.local
     # Mount the local code into the container so you can run scripts / Alembic
     volumes:
-      - ./aci/control_plane:/workdir/aci/control_plane
+      - ./aci/:/workdir/aci
       - ./alembic.ini:/workdir/alembic.ini
     command: >
       /bin/sh -c "alembic upgrade head && tail -f /dev/null"
@@ -82,7 +82,7 @@ services:
       - CONTROL_PLANE_DB_HOST=test-db
     # Mount the local code into the container so you can run scripts / Alembic
     volumes:
-      - ./aci/control_plane:/workdir/aci/control_plane
+      - ./aci/:/workdir/aci
       - ./alembic.ini:/workdir/alembic.ini
     command: >
       /bin/sh -c "alembic upgrade head && tail -f /dev/null"
