Cli/upsert mcp severs tools (#11)
### 🏷️ Ticket


https://www.notion.so/cli-to-upsert-mcp-server-and-tools-with-prepared-json-file-25a8378d6a4780d9a8cad97956b7f2dd

### 📝 Description

- add two cli commands and relevant files to upsert mcp server and tools
via json files.
- similar structure to aci.dev tool calling platform code
    
<!-- This is an auto-generated description by cubic. -->
---

## Summary by cubic
Add two CLI commands to upsert MCP servers and tools from JSON files,
with templated secrets, dry-run by default, and OpenAI-based embeddings.
Also store tool input_schema as JSONB and add CRUD, validation, and
examples.

- New Features
- CLI: upsert-mcp-server and upsert-mcp-tools; dry-run by default, use
--skip-dry-run to commit.
  - Secrets: render server.json with Jinja2 and a .secrets.json file.
- Embeddings: generate/re-generate embeddings for servers/tools; batch
generation for tools.
- DB: CRUD for mcp_servers and mcp_tools; diff preview on updates;
validate names and tool JSON Schema; ensure tools belong to one server
and that server exists.
- Dev setup: mounts ./mcp_servers in compose; Prettier for JSON and VS
Code settings; example Notion server/tools and CLI README.

- Migration
  - Run Alembic upgrade (tool input_schema -> JSONB).
  - Set CLI_OPENAI_API_KEY for the CLI environment.
- Store secrets at backend/mcp_servers/<server>/.secrets.json
(gitignored).
- Example: docker compose exec runner python -m aci.cli
upsert-mcp-server --mcp-server-file ./mcp_servers/notion/server.json
--secrets-file ./mcp_servers/notion/.secrets.json; and docker compose
exec runner python -m aci.cli upsert-mcp-tools --mcp-tools-file
./mcp_servers/notion/tools.json.

<!-- End of auto-generated description by cubic. -->



<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->

## Summary by CodeRabbit

- New Features
- Added CLI commands to upsert MCP servers and tools with optional
dry-run.
  - Enabled OpenAI-based embeddings for servers and tool

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,10 @@
         "editor.formatOnSave": true,
         "editor.defaultFormatter": "charliermarsh.ruff"
     },
+    "[json]": {
+        "editor.formatOnSave": true,
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
     "editor.formatOnSave": true,
     "editor.codeActionsOnSave": {
         "source.organizeImports.ruff": "always"
