--- a/backend/.env.example
+++ b/backend/.env.example
@@ -27,9 +27,11 @@ CONTROL_PLANE_DB_NAME=local_db
 CONTROL_PLANE_ENVIRONMENT=local
 CONTROL_PLANE_FRONTEND_URL=http://localhost:3000
 CONTROL_PLANE_SESSION_SECRET_KEY=zL6PFEOJdlOINtigxnJxXrdo5K0BKpDj
-# CONTROL_PLANE_GOOGLE_CLIENT_ID=
-# CONTROL_PLANE_GOOGLE_CLIENT_SECRET=
-# CONTROL_PLANE_JWT_SIGNING_KEY=K70tcrmB1iVc41RCxgKSPIsLEU3LPUeM
+CONTROL_PLANE_GOOGLE_CLIENT_ID=<your_google_client_id>
+CONTROL_PLANE_GOOGLE_CLIENT_SECRET=<your_google_client_secret>
+CONTROL_PLANE_GOOGLE_OAUTH_REDIRECT_URI_BASE=http://localhost:8000
+CONTROL_PLANE_JWT_SIGNING_KEY=K70tcrmB1iVc41RCxgKSPIsLEU3LPUeM
+CONTROL_PLANE_REFRESH_TOKEN_KEY=jn7vf5UHFxEO5K1Rn4D7M09qhreyH1Cg
 
 ########################################################
 # CLI
