--- a/backend/.env.example
+++ b/backend/.env.example
@@ -32,6 +32,7 @@ CONTROL_PLANE_GOOGLE_CLIENT_SECRET=<your_google_client_secret>
 CONTROL_PLANE_GOOGLE_OAUTH_REDIRECT_URI_BASE=http://localhost:8000
 CONTROL_PLANE_JWT_SIGNING_KEY=K70tcrmB1iVc41RCxgKSPIsLEU3LPUeM
 CONTROL_PLANE_REFRESH_TOKEN_KEY=jn7vf5UHFxEO5K1Rn4D7M09qhreyH1Cg
+CONTROL_PLANE_REDIRECT_URI_BASE=http://localhost:8000
 
 ########################################################
 # CLI
