--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,26 +11,26 @@ repos:
       - id: check-merge-conflict
 
   # Frontend checks
-  # - repo: local
-  #   hooks:
-  #     - id: format check
-  #       name: running frontend format check
-  #       language: system
-  #       entry: sh -c "cd frontend && npm run format"
-  #       pass_filenames: false
-  #       require_serial: true
-  #     - id: lint check
-  #       name: running frontend lint check
-  #       language: system
-  #       entry: sh -c "cd frontend && npm run lint"
-  #       pass_filenames: false
-  #       require_serial: true
-  #     - id: build check
-  #       name: running frontend build check
-  #       language: system
-  #       entry: sh -c "cd frontend && npm run build"
-  #       pass_filenames: false
-  #       require_serial: true
+  - repo: local
+    hooks:
+      - id: format check
+        name: running frontend format check
+        language: system
+        entry: sh -c "cd frontend && pnpm run format:check"
+        pass_filenames: false
+        require_serial: true
+      - id: lint check
+        name: running frontend lint check
+        language: system
+        entry: sh -c "cd frontend && pnpm run lint"
+        pass_filenames: false
+        require_serial: true
+      - id: build check
+        name: running frontend build check
+        language: system
+        entry: sh -c "cd frontend && pnpm run build"
+        pass_filenames: false
+        require_serial: true
 
   # Backend checks
   - repo: local
