wip: tools/call via EXECUTE_TOOL works (#38)
### 📝 Description

- implement tools/call via EXECUTE_TOOL
- tested with notion mcp
- add organization_id to MCPBundle table
    
<!-- This is an auto-generated description by cubic. -->
---

## Summary by cubic
Adds tools/call support via the EXECUTE_TOOL wrapper using the MCP HTTP
client, with per-user auth and automatic OAuth2 token refresh. Also adds
organization_id to MCPServerBundle and selects the correct server config
from the bundle.

- **New Features**
- Handle EXECUTE_TOOL in MCP route: locate tool, verify it’s enabled,
pick the bundle’s server config, and call via mcp ClientSession
(streamable HTTP).
- Add MCPAuthManager and credential flow: fetch user credentials,
refresh OAuth2 tokens when needed, and persist updates; supports OAuth2,
API key, and no-auth.
- Add clear errors: MCPToolNotFound, MCPServerNotConfigured,
MCPToolNotEnabled, plus auth/connected-account errors.
- Move AuthConfig/AuthCredentials to Pydantic RootModel with
discriminators for cleaner validation.
- Include organization_id on MCPServerBundle (schema, CRUD, migration)
and set it during creation.

- **Migration**
- Run DB migrations to add organization_id to mcp_server_bundles (NOT
NULL with FK).
- If existing bundles exist, backfill organization_id before applying
the NOT NULL constraint.

<!-- End of auto-generated description by cubic. -->



<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->
## Summary by CodeRabbit

- New Features
- Execute MCP tools directly via API with authenticated requests
(OAuth2, API Key, NoAuth).
  - Automatic OAuth2 token refresh for connected accounts.
- MCP server bundles are now required to reference an organization and
inherit cascade delete behavior.

- Improvements
- Stricter per-item validation for authentication configs and clearer
JSON-RPC errors for invalid args, unknown tools, and execution failures.
  - More specific control-plane error types and messages.

- Chores
  - Add

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,18 +19,21 @@ repos:
         entry: sh -c "cd frontend && pnpm run format:check"
         pass_filenames: false
         require_serial: true
+        files: ^frontend/
       - id: lint check
         name: running frontend lint check
         language: system
         entry: sh -c "cd frontend && pnpm run lint"
         pass_filenames: false
         require_serial: true
+        files: ^frontend/
       - id: build check
         name: running frontend build check
         language: system
         entry: sh -c "cd frontend && pnpm run build"
         pass_filenames: false
         require_serial: true
+        files: ^frontend/
 
   # Backend checks
   - repo: local
@@ -41,15 +44,18 @@ repos:
         entry: sh -c "cd backend && uv run ruff format ."
         pass_filenames: false
         require_serial: true
+        files: ^backend/
       - id: lint
         name: running backend lint checks
         language: system
         entry: sh -c "cd backend && uv run ruff check . --fix"
         pass_filenames: false
         require_serial: true
+        files: ^backend/
       - id: mypy
         name: running backend mypy checks
         language: system
         entry: sh -c "cd backend && uv run mypy ."
         pass_filenames: false
         require_serial: true
+        files: ^backend/
