--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "mcp-gateway-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -42,6 +42,7 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@stepperize/react": "^5.1.6",
     "@tanstack/match-sorter-utils": "^8.19.4",
     "@tanstack/react-query": "^5.74.4",
     "@tanstack/react-table": "^8.20.6",
@@ -67,6 +68,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.4.0",
+    "react-json-view-lite": "^2.4.2",
     "react-markdown": "^10.1.0",
     "recharts": "^2.15.4",
     "remark-gfm": "^4.0.1",
