Create mcp bundel (#56)
### 🏷️ Ticket

[link the issue or ticket you are addressing in this PR here, or use the
**Development**
section on the right sidebar to link the issue]

### 📝 Description

[Describe your changes in detail (optional if the issue you linked
already contains a
detail description of the change)]

### 🎥 Demo (if applicable)

### 📸 Screenshots (if applicable)

### ✅ Checklist

- [ ] I have signed the [Contributor License Agreement]() (CLA) and read
the [contributing guide](./../CONTRIBUTING.md) (required)
- [ ] I have linked this PR to an issue or a ticket (required)
- [ ] I have updated the documentation related to my change if needed
- [ ] I have updated the tests accordingly (required for a bug fix or a
new feature)
- [ ] All checks on CI passed

    
<!-- This is an auto-generated description by cubic. -->
---

## Summary by cubic
Add the Bundle MCP experience for creating, listing, and viewing MCP
server bundles with richer configuration details and on‑demand tool
schema viewing. Also rename Linked Accounts to Connected Accounts,
introduce centralized API error handling, and add a frontend build check
in CI.

- New Features
- Bundle MCP pages: list and new detail view; create form uses
MultiSelect.
- Hooks: useMCPServerBundles and useMCPServerBundle; updated
bundle/config types with enabled_tools and allowed_teams.
- Tool schema drawer fetches full tool details by name via
mcpService.tools and useMCPTool; improved JSON viewers.
  - DataTable supports expandable sub-rows via renderSubRow.
  - UI components: added Collapsible and MultiSelect.

- Refactors
- Rename “Linked Accounts” to “Connected Accounts” across routes,
components, hooks, and types; update sidebar and redirects.
- Split MCP tool types into MCPToolBasic (list) and MCPToolPublic (full
schema); remove JsonSchemaViewer and agent store/API.
- Centralize API error handling (throwApiError) and apply to org/teams
APIs and shared fetchers.
- CI: add frontend build step in lint workflow; 

--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   lint:
-    name: Lint & Format
+    name: Lint & Format & Build Check
     runs-on: ubuntu-latest
 
     steps:
@@ -23,8 +23,8 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'pnpm'
+          node-version: "20"
+          cache: "pnpm"
           cache-dependency-path: frontend/pnpm-lock.yaml
 
       - name: Install Dependencies
@@ -38,3 +38,7 @@ jobs:
       - name: Check Prettier Formatting
         working-directory: frontend
         run: pnpm run format:check
+
+      - name: Build Frontend
+        working-directory: frontend
+        run: pnpm run build
