add more mcp severs's servers.json (#59)
<!-- This is an auto-generated description by cubic. -->

## Summary by cubic
Added MCP server configs for Context7, Linear, Render, and Sentry to
expand built-in integrations. Also set FastAPI root_path to
/v1/control-plane for correct routing behind proxies.

- New Features
- Context7: streamable_http; no auth or optional API key
(CONTEXT7_API_KEY).
  - Linear: streamable_http; OAuth2 (uses LINEAR_MCP_CLIENT_ID).
  - Render: streamable_http; API key via Authorization: Bearer.
  - Sentry: streamable_http; OAuth2 (uses SENTRY_MCP_CLIENT_ID).

- Refactors
- Added APP_ROOT_PATH and wired FastAPI root_path to /v1/control-plane
to align service paths and docs URLs.

<!-- End of auto-generated description by cubic. -->



<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->
## Summary by CodeRabbit

* **New Features**
* Added integrations for MCP servers: CONTEXT7, LINEAR, RENDER, and
SENTRY.
* Expanded tool/operation catalogs for Linear and Sentry (many new
actions exposed).
* Supports multiple auth methods per service (no auth, API key, OAuth2).

* **Refactor**
* Control Plane now mounts under a base path (/v1/control-plane); routes
are served beneath it.
* API docs and OpenAPI endpoints moved to /docs, /redoc, and
/openapi.json — update bookmarks/clients.
  * Healthcheck endpoint updated to reflect the new base path.
<!-- end of auto-generated comment: release notes by coderabbit.ai -->

--- a/backend/compose.yml
+++ b/backend/compose.yml
@@ -36,7 +36,7 @@ services:
       context: .
       dockerfile: Dockerfile.control_plane
     healthcheck:
-      test: ["CMD-SHELL", "curl localhost:8000/v1/health"]
+      test: ["CMD-SHELL", "curl localhost:8000/v1/control-plane/health"]
       interval: 10s
       retries: 5
       start_period: 3s
