Mcp/separate remote mcp (#62)
- separate remote mcp server into a independent mcp module/service
- remove code from control_plane module
    
<!-- This is an auto-generated description by cubic. -->
---

## Summary by cubic
Split the remote MCP server out of control_plane into a standalone mcp
service with its own FastAPI app, Docker image, and env config.
control_plane now serves on port 8000; the new mcp service runs on port
8001 under /gateway/mcp.

- **Refactors**
- New mcp module: FastAPI app, config, exceptions, dependencies,
logging, middleware with request IDs.
- Routes moved to mcp: health, MCP JSON-RPC, and tools (execute/search).
- New Dockerfile.mcp and compose service (exposes 8001); control_plane
Dockerfile now uses 8000.
- .env.example adds MCP_* vars (DB, session key, log level, OpenAI key).
  - Removed MCP routes and exceptions from control_plane.

- **Migration**
  - Set MCP_* env vars and MCP_OPENAI_API_KEY.
- Update clients to call the mcp service:
http://localhost:8001/gateway/mcp/... (control_plane no longer serves
/mcp).
  - Ensure DB settings for MCP are configured.
  - Rebuild containers to pick up the new service and port changes.

<!-- End of auto-generated description by cubic. -->



<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->
## Summary by CodeRabbit

- New Features
- Dedicated MCP API service with its own health endpoint, docs/openapi
paths, and improved startup logging.
- Global structured error responses and per-request IDs for better
observability.

- Refactor
- MCP decoupled from the control plane into a standalone service;
control plane port aligned to 8000, MCP runs on 8001.

- Chores
- Added MCP environment variables (DB, session secret, log level, OpenAI
API key).
- New MCP container and docker-compose service with healthcheck and
live-reload.
<!-- end of auto-generated comment: release notes by coderabbit.ai -->

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,6 +3,7 @@
 # For local development, you can reuse most of the values from the .env.example file, except for the following:
 ########################################################
 CONTROL_PLANE_OPENAI_API_KEY=<your_openai_api_key>
+MCP_OPENAI_API_KEY=<your_openai_api_key>
 CLI_OPENAI_API_KEY=<your_openai_api_key>
 
 ########################################################
@@ -33,6 +34,19 @@ CONTROL_PLANE_JWT_SIGNING_KEY=K70tcrmB1iVc41RCxgKSPIsLEU3LPUeM
 CONTROL_PLANE_REFRESH_TOKEN_KEY=jn7vf5UHFxEO5K1Rn4D7M09qhreyH1Cg
 CONTROL_PLANE_BASE_URL=http://localhost:8000
 CONTROL_PLANE_LOG_LEVEL=DEBUG
+
+########################################################
+# MCP
+########################################################
+MCP_DB_SCHEME=postgresql+psycopg
+MCP_DB_USER=user
+MCP_DB_PASSWORD=password
+MCP_DB_HOST=db
+MCP_DB_PORT=5432
+MCP_DB_NAME=local_db
+MCP_ENVIRONMENT=local
+MCP_SESSION_SECRET_KEY=zL6PFEOJdlOINtigxnJxXrdo5K0BKpDj
+MCP_LOG_LEVEL=DEBUG
 
 ########################################################
 # CLI
