--- a/backend/Dockerfile.mcp
+++ b/backend/Dockerfile.mcp
@@ -10,11 +10,11 @@ ENV PATH="/workdir/.venv/bin:$PATH"
 ENV PYTHONPATH=/workdir
 
 # .env files will be skipped by default specified in .dockerignore
-COPY ./aci/control_plane /workdir/aci/control_plane
+COPY ./aci/mcp /workdir/aci/mcp
 COPY ./aci/common /workdir/aci/common
 COPY ./aci/__init__.py /workdir/aci/__init__.py
 
 # remove unecessary or sensitive files (.env files are skipped by default specified in .dockerignore)
-RUN rm -rf /workdir/aci/control_plane/tests
+RUN rm -rf /workdir/aci/mcp/tests
 
-CMD ["uvicorn", "aci.control_plane.main:app", "--proxy-headers", "--forwarded-allow-ips=*", "--host", "0.0.0.0", "--port", "8000", "--no-access-log"]
+CMD ["uvicorn", "aci.mcp.main:app", "--proxy-headers", "--forwarded-allow-ips=*", "--host", "0.0.0.0", "--port", "8001", "--no-access-log"]
