add importlinter; fix files that break the rule (#94)
<!-- This is an auto-generated description by cubic. -->

## Summary by cubic
Add Import Linter to enforce backend module boundaries, run it in CI and
pre-commit, and fix violations by removing control_plane dependencies
from aci.common and moving test DB session setup into control_plane
tests.

- New Features
- Added backend/.importlinter with contracts: aci.common is independent;
aci.control_plane and aci.mcp only import from aci.common; CLI isolated
from aci.mcp.
- Run lint-imports in the backend-checks GitHub workflow and as a
pre-commit hook.
  - Added import-linter to backend dev dependencies.

- Refactors
- Removed create_test_db_session from aci.common.test_utils to drop
cross-module imports; kept clear_database.
- Implemented db_session fixture directly in
control_plane/tests/conftest.py.

<!-- End of auto-generated description by cubic. -->



<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->

## Summary by CodeRabbit

* **Chores**
  * Added Import Linter to CI to enforce module import boundaries.
  * Introduced a pre-commit hook to run import checks locally.
* Added configuration for import rules and enabled external package
awareness.
  * Included Import Linter as a development dependency.

* **Tests**
* Refactored test database session setup to create sessions explicitly
per test with added safety checks.
* Removed an obsolete test helper for DB sessions to simplify and harden
test isolation.

<!-- end of auto-generated comment: release notes by coderabbit.ai -->

--- a/.github/workflows/backend-checks.yml
+++ b/.github/workflows/backend-checks.yml
@@ -49,6 +49,10 @@ jobs:
         working-directory: backend
         run: |
           uv run mypy .
+      - name: Run Import Linter
+        working-directory: backend
+        run: |
+          uv run lint-imports
 
   test:
     name: Compose Tests
