feat(auth): add email verification flow (#92)
This PR implements email verification across backend and frontend.


https://github.com/user-attachments/assets/3774aa0f-87c5-4169-8613-5d6673445653


https://www.notion.so/Email-Verification-Organization-Invitations-5b938127ed164da6b857c69e0cd2b0cd?source=copy_link

- Implements end-to-end email verification for email/password signups,
shifting Google accounts
  to auto-verified status backend/aci/control_plane/routes/auth.py:161.

  Scope

- Introduces verification persistence via Alembic migration and
SQLAlchemy model updates backend/

aci/alembic/versions/2025_09_15_1930-c1c30fd48848_add_verifications_table_for_email_.py:21,
  backend/aci/common/db/sql_models.py:83.
- Adds token utilities and SES-backed email delivery with new
configuration surface backend/aci/
control_plane/token_utils.py:19,
backend/aci/control_plane/external_services/email_service.py:17,
  backend/aci/control_plane/config.py:37, backend/.env.example:37.
- Reworks signup/login flows to gate access until verification
completes, plus dedicated redirect
UX on the frontend backend/aci/control_plane/routes/auth.py:220,
frontend/src/app/(auth)/signup/
page.tsx:33, frontend/src/app/auth/verify-pending/page.tsx:9,
frontend/src/app/auth/verify-
success/page.tsx:7, frontend/src/app/auth/verify-error/page.tsx:9,
frontend/src/components/
  context/metainfo.tsx:112.
- Covers registration edge cases, verification token handling, and login
gating with new backend
  tests backend/aci/control_plane/tests/routes/auth/test_auth.py:64.

  Follow-ups

  - Populate AWS SES secrets before deploy;
    
<!-- This is an auto-generated description by cubic. -->
---

## Summary by cubic
Adds end-to-end email verification for email-based signups, including
SES-powered emails, verification tokens/endpoint, and minimal UI to
guide users. Email/password logins now require a verified email; Google
signups are auto-verified.

- **New Features**
- DB: new verifications table (FK to 

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,6 +7,14 @@ MCP_OPENAI_API_KEY=<your_openai_api_key>
 CLI_OPENAI_API_KEY=<your_openai_api_key>
 
 ########################################################
+# Common
+########################################################
+# Those are only needed for local development for AWS, in prod we rely on IAM roles.
+AWS_ACCESS_KEY_ID=<your_aws_access_key_id>  # Only needed for local development.
+AWS_SECRET_ACCESS_KEY=<your_aws_secret_access_key>  # Only needed for local development.
+AWS_DEFAULT_REGION=<your_aws_default_region>  # Only needed for local development.
+
+########################################################
 # Alembic
 ########################################################
 ALEMBIC_DB_SCHEME=postgresql+psycopg
@@ -34,6 +42,7 @@ CONTROL_PLANE_JWT_SIGNING_KEY=K70tcrmB1iVc41RCxgKSPIsLEU3LPUeM
 CONTROL_PLANE_REFRESH_TOKEN_KEY=jn7vf5UHFxEO5K1Rn4D7M09qhreyH1Cg
 CONTROL_PLANE_BASE_URL=http://localhost:8000
 CONTROL_PLANE_LOG_LEVEL=DEBUG
+CONTROL_PLANE_SENDER_EMAIL=<your_sender_email>
 
 ########################################################
 # MCP
