Feat/virtual mcp servers (#104)
### 🏷️ Ticket

https://www.notion.so/Design-Doc-a-new-service-as-the-execution-engine-for-virtual-MCP-servers-integration-based-26b8378d6a4780b4a389cf302d021c49

### 📝 Description

Create a virtual mcp service that hosts the integrations from tool
calling platform as virtual mcp servers.


    
<!-- This is an auto-generated description by cubic. -->
---

## Summary by cubic
Adds a new Virtual MCP service to host integrations as MCP servers and
execute tools via REST or connector backends. Includes DB models, CRUD,
CLI, and Docker setup, and hooks into existing MCP tool execution and
auth.

- New Features
- Virtual MCP FastAPI app with JSON-RPC endpoints (tools/list,
tools/call) and health check.
- Tool execution engine: REST executor (schema validation, defaults,
auth injection) and connector executor (pluggable connectors).
- Built-in Gmail connector; Brave Search REST tools; E2B connector tool.
- New DB tables and schemas for virtual_mcp servers and tools, with CRUD
helpers and Alembic migration.
- New CLI group: virtual-mcp upsert-server and upsert-tools (dry-run
supported).
  - MCP CLI flags simplified: --server-file and --tools-file.
- Auth flow supports X-Virtual-MCP-Auth-Token and improved
MCPAuthManager.
- Dockerfile and docker-compose service (port 8002) plus VIRTUAL_MCP_*
envs.
  - Example server/tool JSON for Gmail, Brave Search, and E2B.

- Migration
  - Run Alembic to create virtual_mcp tables.
- Set VIRTUAL_MCP_* env vars (DB, environment, session secret, log
level).
  - Start the new service (virtual_mcp) via docker-compose.
- Seed virtual servers and tools using the new CLI with files in
backend/virtual_mcp_servers; for MCP-indexed virtual servers, use files
under backend/mcp_servers (e.g., Gmail).

<!-- End of auto-generated description by cubic. -->



<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->
## Summary by CodeRabbit

* **New Features**
* Virtual MCP service: JSON‑RPC (initialize, t

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -58,6 +58,19 @@ MCP_SESSION_SECRET_KEY=zL6PFEOJdlOINtigxnJxXrdo5K0BKpDj
 MCP_LOG_LEVEL=DEBUG
 
 ########################################################
+# Virtual MCP
+########################################################
+VIRTUAL_MCP_DB_SCHEME=postgresql+psycopg
+VIRTUAL_MCP_DB_USER=user
+VIRTUAL_MCP_DB_PASSWORD=password
+VIRTUAL_MCP_DB_HOST=db
+VIRTUAL_MCP_DB_PORT=5432
+VIRTUAL_MCP_DB_NAME=local_db
+VIRTUAL_MCP_ENVIRONMENT=local
+VIRTUAL_MCP_SESSION_SECRET_KEY=zL6PFEOJdlOINtigxnJxXrdo5K0BKpDj
+VIRTUAL_MCP_LOG_LEVEL=DEBUG
+
+########################################################
 # CLI
 ########################################################
 CLI_DB_SCHEME=postgresql+psycopg
