--- a/backend/compose.yml
+++ b/backend/compose.yml
@@ -75,6 +75,27 @@ services:
       db:
         condition: service_healthy
 
+  virtual_mcp:
+    build:
+      context: .
+      dockerfile: Dockerfile.virtual_mcp
+    healthcheck:
+      test: ["CMD-SHELL", "curl localhost:8002/virtual/mcp/health"]
+      interval: 10s
+      retries: 5
+      start_period: 3s
+      timeout: 10s
+    env_file:
+      - .env.local
+    volumes:
+      - ./aci/virtual_mcp:/workdir/aci/virtual_mcp
+      - ./aci/common:/workdir/aci/common
+    ports:
+      - "8002:8002"
+    command: uvicorn aci.virtual_mcp.main:app --reload --proxy-headers --forwarded-allow-ips=* --host 0.0.0.0 --port 8002 --no-access-log
+    depends_on:
+      db:
+        condition: service_healthy
 
   # can think of runner as an staging host for executing any commands
   # e.g., run cli commands and scripts such as seed db etc.
@@ -88,6 +109,7 @@ services:
     volumes:
       - ./aci/:/workdir/aci
       - ./mcp_servers/:/workdir/mcp_servers
+      - ./virtual_mcp_servers/:/workdir/virtual_mcp_servers
       - ./alembic.ini:/workdir/alembic.ini
     command: >
       /bin/sh -c "alembic upgrade head && tail -f /dev/null"
