add tools file (#119)
### 📝 Description
- generate tools.json files for mcp servers (that are backed by virtual
mcp servers)
    
<!-- This is an auto-generated description by cubic. -->
---

## Summary by cubic
Added generated tools.json files for virtual MCP servers to standardize
tool metadata and input schemas across many integrations. Also expanded
Gmail and major Google/Microsoft tools for broader coverage.

- **New Features**
- Added tools.json for 50+ integrations (e.g., Airtable, Brave Search,
Baidu Map, Figma, Browserbase, Cal.com, Calendly, Dexscreener, Dify,
Feishu).
- Comprehensive Google and Microsoft coverage (Calendar, Sheets, Docs,
Meet, Tasks; Microsoft Calendar, OneDrive).
- Updated Gmail tools.json with message operations and improved
SEND_EMAIL schema formatting.
- Standardized metadata (canonical_tool_name and
description/input_schema hashes) for consistency and deduping.
- Clear input_schema structures (path/query/body) with validations to
improve tool reliability.

<!-- End of auto-generated description by cubic. -->



<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->

## Summary by CodeRabbit

* **New Features**
* Added extensive new tool integrations, enabling actions across
communications, productivity, data, and cloud services. Highlights
include: Gmail (messages, labels, drafts, threads), Google
Calendar/Docs/Sheets/Tasks/Maps/Meet, Microsoft Calendar/OneDrive,
Figma, Brave Search, arXiv, Airtable, Coda, ClickUp, Cloudflare,
Calendly, Cal.com, Discord (current user), ElevenLabs, Feishu,
Browserbase, Baserow, Apaleo, ActiveCampaign, Accredible, Dify, Daytona,
DexScreener, HackerNews, Holded, LMNT, AeroWorkflow, Agent Mail,
Aidbase, Akkio, All Images, API Template, Baidu Map, and more.

<!-- end of auto-generated comment: release notes by coderabbit.ai -->

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,6 +10,17 @@ repos:
       - id: check-added-large-files
       - id: check-merge-conflict
 
+  - repo: local
+    hooks:
+      - id: prettier-json
+        name: prettier (json)
+        language: node
+        entry: prettier
+        args: ["--write"]
+        files: \.(json|jsonc)$
+        additional_dependencies:
+          - prettier@3.6.2
+
   # Frontend checks
   - repo: local
     hooks:
