--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -38,6 +38,8 @@ dependencies = [
     "humanize>=4.11.0",
     "e2b-code-interpreter>=2.0.0",
     "elevenlabs>=2.16.0",
+    "favicon>=0.7.0",
+    "tldextract>=5.3.0",
 ]
 
 [dependency-groups]
