add sentry to backend services (#128)
### 📝 Description
Enable sentry for all backend services

    
<!-- This is an auto-generated description by cubic. -->
---

## Summary by cubic
Enable Sentry in control-plane, MCP, and Virtual MCP to capture errors
and performance data in non-local environments. Uses a shared setup with
environment-aware sampling (0.1 in production, 1.0 otherwise) and
continuous profiling.

- **New Features**
- Added common setup_sentry() with send_default_pii and profiling
enabled.
  - Introduced Environment enum and switched services to use it.
  - Initialize Sentry only when environment != local.
  - Added SENTRY_DSN env vars for each service.

- **Migration**
- Set CONTROL_PLANE_SENTRY_DSN, MCP_SENTRY_DSN, and
VIRTUAL_MCP_SENTRY_DSN in non-local envs.
  - Ensure ENVIRONMENT variables use: local, development, or production.

<!-- End of auto-generated description by cubic. -->



<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->

## Summary by CodeRabbit

* **New Features**
* Enabled centralized error and performance monitoring in non-local
environments across Control Plane, MCP, and Virtual MCP. Local
environments remain unchanged.

* **Configuration**
* Added new environment variables to configure monitoring DSNs:
CONTROL_PLANE_SENTRY_DSN, MCP_SENTRY_DSN, and VIRTUAL_MCP_SENTRY_DSN.

* **Refactor**
* Standardized environment handling across services using a consistent
enumeration for local, development, and production.

<!-- end of auto-generated comment: release notes by coderabbit.ai -->

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -43,6 +43,7 @@ CONTROL_PLANE_REFRESH_TOKEN_KEY=jn7vf5UHFxEO5K1Rn4D7M09qhreyH1Cg
 CONTROL_PLANE_BASE_URL=http://localhost:8000
 CONTROL_PLANE_LOG_LEVEL=DEBUG
 CONTROL_PLANE_SENDER_EMAIL=<your_sender_email>
+CONTROL_PLANE_SENTRY_DSN=dummy
 
 ########################################################
 # MCP
@@ -56,6 +57,7 @@ MCP_DB_NAME=local_db
 MCP_ENVIRONMENT=local
 MCP_SESSION_SECRET_KEY=zL6PFEOJdlOINtigxnJxXrdo5K0BKpDj
 MCP_LOG_LEVEL=DEBUG
+MCP_SENTRY_DSN=dummy
 
 ########################################################
 # Virtual MCP
@@ -69,6 +71,7 @@ VIRTUAL_MCP_DB_NAME=local_db
 VIRTUAL_MCP_ENVIRONMENT=local
 VIRTUAL_MCP_SESSION_SECRET_KEY=zL6PFEOJdlOINtigxnJxXrdo5K0BKpDj
 VIRTUAL_MCP_LOG_LEVEL=DEBUG
+VIRTUAL_MCP_SENTRY_DSN=dummy
 
 ########################################################
 # CLI
